2008-09-30  tama  <repeatedly@gmail.com>

	* Implement the localize view.

2008-09-29  tama  <repeatedly@gmail.com>

	* Add the user transfer function.

2008-09-24  tama  <repeatedly@gmail.com>

	* Version 0.9.0

2008-09-24  tama  <repeatedly@gmail.com>

	* Implement the minimun function.

2008-09-23  tama  <repeatedly@gmail.com>

	* Add m2p tool.

2008-09-17  tama  <repeatedly@gmail.com>

	* Start implementation.
