@@ -2,7 +2,7 @@
   <h2>[[bad]]</h2>
   <?r if flash[:msg] ?>
   <p>
-    #{flash[:msg]}
+    [[#{flash[:msg]}]]
   </p>
   <?r end ?>
   <p>
