@@ -1,7 +1,7 @@
 <div id="description">
-  <h2>[[main]]</h2>
+  <h2>[[index]]</h2>
   <p>
-    [[index]]
+    [[index_text]]
   </p>
 </div>
 
