@@ -2,16 +2,16 @@
 
 <?r unless recent or others ?>
 <div id="description">
-  <h2>[[no_desc]]</h2>
+  <h2>[[no_site]]</h2>
   <p>
-    [[no_text]]
+    [[no_site_text]]
   </p>
 </div>
 <?r else ?>
 <div id="description">
-  <h2>[[main]]</h2>
+  <h2>[[transfer]]</h2>
   <p>
-    [[trans]]
+    [[transfer_text]]
   </p>
 </div>
 
